--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         <div class="lg:w-[1060px] h-[130px] py-3 border-y my-4 mx-auto items-center">
           <div class="text-center">
               <h4 class="text-xl lg:text-4xl mb-1 font-extrabold">Our New Products</h4>
-              <p class="text-sm lg:text-base font-medium opacity-90 ">If you’re the service on which that outsourcing depends there’s <br>a lot of weight on your shoulders to get it right</p>
+              <p class="text-sm lg:text-base font-medium opacity-90 ">A great product launch  is one of your best opportunities to re-engage <br>customers and remind them value your product provides.</p>
           </div>
          </div>
 
@@ -469,10 +469,5 @@
         <a class="link link-hover opacity-80">Hockeys for Adult</a>
       </nav>
     </footer>
-    
-    
-
-
-
 </body>
 </html>
